Changelog
=========

0.17-dev - (unreleased)
-----------------------

0.16 - (2011-08-02)
-------------------
 * Bug fix: fix unicode encode errors in @@rdf view [tiberich #4449]

0.15 - (2011-07-29)
-------------------
 * Bug fix: avoid triggering exceptions when parent has no workflow [tiberich #4418]

0.14 - (2011-07-14)
-------------------
 * Bug fix: check if parent is published when including isPartOf info in @@rdf [tiberich #4418]

0.13 - (2011-07-11)
-------------------
 * Bug fix: use getFolderContents instead of objectValues() to retrieve children [tiberich #4418]

0.12 - (2011-05-24)
-------------------
 * Feature: add rdf:datatype to date fields in @@rdf view [tiberich #4250]

0.11 - (2011-05-18)
-------------------
 * Bug fix: fix errors in previous egg release [tiberich #4250]

0.10 - (2011-05-18)
-------------------
 * Change: use dcterm namespace for metadata instead of dc [tiberich #4250]

0.9 - (2011-04-20)
------------------
 * Cleaned: pyflakes warnings [ichimdav #4141]
 * Cleaned: pylint violations [ichimdav #4140]

0.8 - (2011-02-09)
------------------
 * Bug fix: skip fields for which the accessor cannot be determined [tiberich #3982]

0.7 - (2010-12-16)
------------------
- set surf logging level to CRITICAL to avoid all INFO messages #3951 [vincisas]

0.6 - (2010-11-10)
------------------
- typo fix for tests [vincisas]

0.5 - (2010-09-30)
------------------
- dcterms:hasPart added to folderish content #3519 [vincisas]
- dcterms:isPartOf added to contained content #3519 [vincisas]

0.4 (2010-09-06)
----------------
- use accessor to get the value of fields [tiberich #3550]
- 'file' added to blacklist as a temporary fix for encode error [ghicaale]
- under marshaller.py added temporary fix for: 'tuple' object has no attribute 'replace' [ghicaale]
- Silent failure with schema or rdf generation, errors are logged #3564 [vincisas]
- Schemageneration contains extended fields too #3577 [vincisas]

0.3 (2010-08-03)
----------------