@@ -3,6 +3,7 @@ Changelog
 
 0.17-dev - (unreleased)
 -----------------------
+ * Bug fix: fix unicode related errors in @@rdf view [tiberich #4530, #4531]
 
 0.16 - (2011-08-02)
 -------------------
